--- a/newsletter-signup/src/App.css
+++ b/newsletter-signup/src/App.css
@@ -1,42 +1,57 @@
 #root {
-  max-width: 1280px;
+  max-width: 1440px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+  text-align: flex-end;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form {
+  padding: 0;
+  margin: 0;
+  display: grid;
+  grid-template-columns: 480px 320px;
+  background-color: white;
+  color: hsl(235, 18%, 26%);
+  width: 800px;
+  height: 527px;
+  border-radius: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.input-field {
+  display: grid;
+  margin-left: 10px;
+  align-items: center;
+  height: 527px;
 }
 
-.card {
-  padding: 2em;
+h1 {
+  margin-left: 40px;
+  font-size: 50px;
 }
 
-.read-the-docs {
-  color: #888;
+p {
+  margin-left: 40px;
+  padding: 0;
 }
+
+.message {
+  text-wrap: nowrap;
+}
+.image {
+ 
+}
+.image img {
+  height: 100%;
+}
+ul {
+  margin-left: 0;
+}
+ .list {
+  display: flex;
+  padding: 5px;
+  margin-left: 0;
+ }
+
+ .list img {
+  margin-right: 20px;
+ }
