--- a/newsletter-signup/src/App.css
+++ b/newsletter-signup/src/App.css
@@ -35,12 +35,7 @@ p {
   padding: 0;
 }
 
-.message {
-  
-}
-.image {
- 
-}
+
 .image img {
   height: 95%;
   width: 92%;
@@ -68,9 +63,11 @@ ul {
  input {
   width: 320px;
   height: 40px;
+  border-style: solid;
   border-radius: 5px;
-  border-width: 1.5px;
+  border-width: 2px;
   border-color: rgb(241, 239, 239);
+  outline-color: tomato;
   margin-top: 10px;
   margin-left: 40px;
  }
@@ -88,4 +85,7 @@ ul {
   border: none;
   background-color: hsl(234, 29%, 20%);
   color: white;
+ }
+ button:hover {
+  background: linear-gradient(to right, tomato, rgb(255, 115, 0))
  }
