--- a/newsletter-signup/src/App.css
+++ b/newsletter-signup/src/App.css
@@ -91,4 +91,42 @@ ul {
  }
 
  /* success */
- 
+ .success {
+  background-color: white;
+  width: 400px;
+  height: 400px;
+  color:  hsl(234, 29%, 20%);
+  border-radius: 20px;
+ }
+
+ a {
+  color: white;
+ }
+
+ a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
+}
+
+.success-image {
+  width: 50px;
+  height: 50px;
+}
+.suc-head {
+  font-size: 38px;
+}
+
+.suc-text {
+  font-size: 14px;
+}
