--- a/newsletter-signup/src/App.css
+++ b/newsletter-signup/src/App.css
@@ -119,10 +119,10 @@ a:active {
   text-decoration: none;
 }
 
-.success-image {
+/* .suc-img {
   width: 50px;
   height: 50px;
-}
+} */
 .suc-head {
   padding-top: 40px;
   font-size: 38px;
